--- a/src/main/webapp/static/client/view/index.html
+++ b/src/main/webapp/static/client/view/index.html
@@ -5,7 +5,7 @@
         <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
         <link href="/bootstrap/css/docs.min.css" rel="stylesheet">
         <link href="/bootstrap/css/navbar-fixed-top.css" rel="stylesheet">
-        <link href="/bootstrap/css/datetimepicker.css" rel="stylesheet">
+        <link href="/client/css/client.css" rel="stylesheet">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -22,7 +22,6 @@
         <script src="/js/lib/angular-ui-router.js"></script>
         <script src="/js/lib/moment.min.js"></script>
         <script src="/js/lib/ui-bootstrap-tpls-0.11.0.js"></script>
-
 
         <script src="/client/js/main.js"></script>
         <script src="/client/js/templatesController.js"></script>
