Сохранение данных, добавление новых записей

--- a/src/main/webapp/static/client/view/documents.html
+++ b/src/main/webapp/static/client/view/documents.html
@@ -4,27 +4,30 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body data-feedly-mini="yes">
-<table class="table sgreen">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Место приема</th>
-            <th>Дата и время приема</th>
-            <th>Больной ФИО</th>
-            <th>Врач ФИО</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="document in documents">
-            <th scope="row">
-                <a ng-href="#/template/{{template.id}}/document/{{document.id}}">#{{document.id}}</a>
-            </th>
-            <td>{{document.reception.place}}</td>
-            <td>{{document.reception.time}}</td>
-            <td>{{document.patient.name}}</td>
-            <td>{{document.doctor.name}}</td>
-        </tr>
-    </tbody>
-</table>
+    <form class="form-inline">
+        <a class="btn btn-primary" role="button" ng-href="#/template/{{template.id}}/document/0">Создать</a>
+    </form>
+    <table class="table sgreen">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Место приема</th>
+                <th>Дата и время приема</th>
+                <th>Больной ФИО</th>
+                <th>Врач ФИО</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="document in documents">
+                <th scope="row">
+                    <a ng-href="#/template/{{template.id}}/document/{{document.id}}">#{{document.id}}</a>
+                </th>
+                <td>{{document.reception.place}}</td>
+                <td>{{document.reception.time}}</td>
+                <td>{{document.patient.name}}</td>
+                <td>{{document.doctor.name}}</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
