--- a/src/main/webapp/static/client/view/index.html
+++ b/src/main/webapp/static/client/view/index.html
@@ -23,6 +23,9 @@
         <script src="/js/lib/moment.min.js"></script>
         <script src="/js/lib/ui-bootstrap-tpls-0.11.0.js"></script>
 
+        <script src="/client/js/dictionary.js"></script>
+        <script src="/client/js/dictionaryController.js"></script>
+
         <script src="/client/js/main.js"></script>
         <script src="/client/js/templatesController.js"></script>
         <script src="/client/js/templateController.js"></script>
