--- a/src/main/webapp/static/client/view/documents.html
+++ b/src/main/webapp/static/client/view/documents.html
@@ -22,7 +22,7 @@
                 <th scope="row">
                     <a ng-href="#/template/{{template.id}}/document/{{document.id}}">#{{document.id}}</a>
                 </th>
-                <td>{{document.reception.place}}</td>
+                <td>{{document.reception.clinic.name}}</td>
                 <td>{{document.reception.time}}</td>
                 <td>{{document.patient.name}}</td>
                 <td>{{document.doctor.name}}</td>
