--- a/src/main/webapp/static/client/view/dictionary_clinics.html
+++ b/src/main/webapp/static/client/view/dictionary_clinics.html
@@ -1,5 +1,5 @@
 <div class="modal-header ng-scope">
-    <h3 class="modal-title">Пациенты</h3>
+    <h3 class="modal-title">Клиники</h3>
 </div>
 <div class="modal-body ng-scope">
     <table class="table sgreen selectable">
